프로젝트 마무리

--- a/bigdata_project.ipynb
+++ b/bigdata_project.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -21,16 +20,11 @@
         "# 빅데이터 분석 프로젝트\n",
         "\n",
         ">### 가상화폐 거래추세에 따른 그래픽카드 거래추세 변동 확인하기\n",
-        "\n",
         "* 데이터 수집 (크롤링)\n",
-        "\n",
         "* 데이터 전처리 및 가공\n",
-        "\n",
         "* 데이터 저장\n",
-        "\n",
         "* 데이터 시각화\n",
-        "\n",
-        "* 결론\n"
+        "* 결론"
       ],
       "metadata": {
         "id": "LirAU7zEuP3R"
